// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shared Internals Client Logic getNextInternalsShareScopeClient returns the correct share scope for a client compiler (Next 14) 1`] = `
Object {
  "next-compiled-react-dom": Object {
    "import": "mocked/relative/react",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "next/dist/compiled/react-dom-react-dom-5-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom-react-dom-7-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom",
    "shareKey": "react-dom",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-11-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-9-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-1-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-3-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react",
    "shareKey": "react",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-20-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-22-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-17-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-19-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-13-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-15-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/link": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "next/navigation": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "react-dom-original": Object {
    "issuerLayer": undefined,
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "default",
    "singleton": true,
  },
  "react-dom-react-dom-4-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom-react-dom-6-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/client-react-dom/client-10-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/client-react-dom/client-8-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-0-app-pages-browser": Object {
    "import": "next/dist/compiled/react",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-2-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react",
    "shareKey": "react",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-21-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-23-app-pages-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-16-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-18-pages-dir-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-12-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-14-pages-dir-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
}
`;

exports[`Shared Internals Client Logic getNextInternalsShareScopeClient returns the correct share scope for a client compiler (Next 15) 1`] = `
Object {
  "next-compiled-react-dom": Object {
    "import": "mocked/relative/react",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "next/dist/compiled/react-dom-react-dom-5-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom-react-dom-7-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom",
    "shareKey": "react-dom",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-11-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-9-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-1-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-3-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react",
    "shareKey": "react",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-20-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-22-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-17-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-19-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-13-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-15-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/link": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "next/navigation": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/link",
    "shareScope": "app-pages-browser",
    "singleton": true,
  },
  "react-dom-original": Object {
    "exclude": Object {
      "version": ">19",
    },
    "issuerLayer": undefined,
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "default",
    "singleton": true,
  },
  "react-dom-react-dom-4-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom-react-dom-6-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/client-react-dom/client-10-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/client-react-dom/client-8-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-0-app-pages-browser": Object {
    "import": "next/dist/compiled/react",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-2-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react",
    "shareKey": "react",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-21-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-23-app-pages-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-16-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-18-pages-dir-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-12-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-14-pages-dir-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
}
`;

exports[`Shared Internals Client Logic getReactGroupClient returns the correct config for Next 14 1`] = `
Object {
  "next/dist/compiled/react-dom-react-dom-5-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom-react-dom-7-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom",
    "shareKey": "react-dom",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-11-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-9-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-1-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-3-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react",
    "shareKey": "react",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-20-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-22-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-17-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-19-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-13-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-15-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom-react-dom-4-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom-react-dom-6-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/client-react-dom/client-10-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/client-react-dom/client-8-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-0-app-pages-browser": Object {
    "import": "next/dist/compiled/react",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-2-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react",
    "shareKey": "react",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-21-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-23-app-pages-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-16-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-18-pages-dir-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-12-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-14-pages-dir-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
}
`;

exports[`Shared Internals Client Logic getReactGroupClient returns the correct config for Next 15 1`] = `
Object {
  "next/dist/compiled/react-dom-react-dom-5-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom-react-dom-7-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom",
    "shareKey": "react-dom",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-11-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-dom/client-react-dom/client-9-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-1-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-react-3-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react",
    "shareKey": "react",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-20-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react-refresh/runtime-react-refresh/runtime-22-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-17-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-dev-runtime-react/jsx-dev-runtime-19-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-13-app-pages-browser": Object {
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "next/dist/compiled/react/jsx-runtime-react/jsx-runtime-15-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "next/dist/compiled/react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom-react-dom-4-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom-react-dom-6-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-dom",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom",
    "shareKey": "react-dom",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/client-react-dom/client-10-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-dom/client-react-dom/client-8-app-pages-browser": Object {
    "import": "next/dist/compiled/react-dom/client",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-dom/client",
    "shareKey": "react-dom/client",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-0-app-pages-browser": Object {
    "import": "next/dist/compiled/react",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react",
    "shareKey": "react",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-react-2-pages-dir-browser": Object {
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react",
    "shareKey": "react",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-21-pages-dir-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react-refresh/runtime-react-refresh/runtime-23-app-pages-browser": Object {
    "import": "next/dist/compiled/react-refresh/runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react-refresh/runtime",
    "shareKey": "react-refresh/runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-16-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-dev-runtime-react/jsx-dev-runtime-18-pages-dir-browser": Object {
    "import": "next/dist/compiled/react/jsx-dev-runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-dev-runtime",
    "shareKey": "react/jsx-dev-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-12-app-pages-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "app-pages-browser",
    "layer": "app-pages-browser",
    "request": "react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "app-pages-browser",
    "singleton": true,
    "version": "18.2.0",
  },
  "react/jsx-runtime-react/jsx-runtime-14-pages-dir-browser": Object {
    "import": "next/dist/compiled/react/jsx-runtime",
    "issuerLayer": "pages-dir-browser",
    "layer": "pages-dir-browser",
    "request": "react/jsx-runtime",
    "shareKey": "react/jsx-runtime",
    "shareScope": "pages-dir-browser",
    "singleton": true,
    "version": "18.2.0",
  },
}
`;
